2009-04-23  Paul Brook  <paul@codesourcery.com>
	    Kazu Hirata  <kazu@codesourcery.com>

	* libc/stdlib/__atexit.c (__register_exitproc): Use weak reference
	to malloc.  Allocate dynamically only if it is present.
	* libc/stdlib/__call_atexit.c (__call_exitprocs): Use weak
	reference to free.  Call free only if it is present.

2009-04-22 Anthony Green <green@moxielogic.com>

	* configure.host: Add moxie support.
	* libc/machine/configure.in: Add moxie support.
	* libc/machine/configure: Rebuilt.
	* libc/machine/moxie/aclocal.m4: New file.
	* libc/machine/moxie/configure: New file.
	* libc/machine/moxie/configure.in: New file.
	* libc/machine/moxie/Makefile.am: New file.
	* libc/machine/moxie/Makefile.in: New file.
	* libc/machine/moxie/setjmp.S: New file.
	* libc/include/machine/setjmp.h (_JBLEN): Define for moxie.
	* libc/include/machine/ieeefp.h: Add moxie support. 

2009-04-22  Kazu Hirata  <kazu@codesourcery.com>

	* libc/stdio/local.h (__chclass, __state_table, __action_table):
	Add extern to the declarations.
	* libc/stdlib/local.h (__iso_8859_conv, __cp_conv): Likewise.

2009-04-21  Corinna Vinschen  <corinna@vinschen.de>

	* libc/ctype/ctype_.c (_CTYPE_DATA_128_255): Rename from
	_CTYPE_DATA_128_256.
	* libc/ctype/ctype_cp.h: Split off all character class values for
	character 255 from the rest of the definitions.
	(__ctype_cp): Use the new definitions.  Make sure that the table
	always contains 0 for EOF (-1).
	* libc/ctype/ctype_iso.h: Ditto.

2009-04-21  Sandra Loosemore  <sandra@codesourcery.com>

	* libc/reent/impure.c (__sf_fake_stdin, __sf_fake_stdout)
	(__sf_fake_stderr): Declare locally with weak attribute.

2009-04-21  Mark Mitchell  <mark@codesourcery.com>

	* libc/include/_ansi.h: Move C++ defines to top of file.
	(_NOTHROW): New macro.
	(_EXFUN_NOTHROW): Likewise.
	* libc/include/stdlib.h (calloc): Declare with _EXFUN_NOTHROW.
	(free): Likewise.
	(malloc): Likewise.
	(realloc): Likewise.
	(_malloc_r): Likewise.
	(_callor_r): Likewise.